--- a/t/th/the/thesistheme.net.html
+++ b/t/th/the/thesistheme.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thesistheme.net privacy policy that was archived on 2018-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181208173422id_/http%3A//www.thesistheme.net/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thesistheme.net privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609044039id_/http%3A//www.thesistheme.net/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en-US"><head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -15,9 +15,9 @@
 <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.thesistheme.net/xmlrpc.php?rsd">
 <link rel="dns-prefetch" href="//s.w.org">
 <script type="text/javascript">
-			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/11\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/11\/svg\/","svgExt":".svg","source":{"concatemoji":"http:\/\/www.thesistheme.net\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.9.8"}};
-			!function(a,b,c){function d(a,b){var c=String.fromCharCode;l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,a),0,0);var d=k.toDataURL();l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,b),0,0);var e=k.toDataURL();return d===e}function e(a){var b;if(!l||!l.fillText)return!1;switch(l.textBaseline="top",l.font="600 32px Arial",a){case"flag":return!(b=d([55356,56826,55356,56819],[55356,56826,8203,55356,56819]))&&(b=d([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]),!b);case"emoji":return b=d([55358,56760,9792,65039],[55358,56760,8203,9792,65039]),!b}return!1}function f(a){var c=b.createElement("script");c.src=a,c.defer=c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var g,h,i,j,k=b.createElement("canvas"),l=k.getContext&&k.getContext("2d");for(j=Array("flag","emoji"),c.supports={everything:!0,everythingExceptFlag:!0},i=0;i<j.length;i++)c.supports[j[i]]=e(j[i]),c.supports.everything=c.supports.everything&&c.supports[j[i]],"flag"!==j[i]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[j[i]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(h=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",h,!1),a.addEventListener("load",h,!1)):(a.attachEvent("onload",h),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),g=c.source||{},g.concatemoji?f(g.concatemoji):g.wpemoji&&g.twemoji&&(f(g.twemoji),f(g.wpemoji)))}(window,document,window._wpemojiSettings);
-		</script><script src="http://www.thesistheme.net/wp-includes/js/wp-emoji-release.min.js?ver=4.9.8" type="text/javascript" defer=""></script>
+			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/svg\/","svgExt":".svg","source":{"concatemoji":"http:\/\/www.thesistheme.net\/wp-includes\/js\/wp-emoji-release.min.js?ver=5.2.1"}};
+			!function(a,b,c){function d(a,b){var c=String.fromCharCode;l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,a),0,0);var d=k.toDataURL();l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,b),0,0);var e=k.toDataURL();return d===e}function e(a){var b;if(!l||!l.fillText)return!1;switch(l.textBaseline="top",l.font="600 32px Arial",a){case"flag":return!(b=d([55356,56826,55356,56819],[55356,56826,8203,55356,56819]))&&(b=d([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]),!b);case"emoji":return b=d([55357,56424,55356,57342,8205,55358,56605,8205,55357,56424,55356,57340],[55357,56424,55356,57342,8203,55358,56605,8203,55357,56424,55356,57340]),!b}return!1}function f(a){var c=b.createElement("script");c.src=a,c.defer=c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var g,h,i,j,k=b.createElement("canvas"),l=k.getContext&&k.getContext("2d");for(j=Array("flag","emoji"),c.supports={everything:!0,everythingExceptFlag:!0},i=0;i<j.length;i++)c.supports[j[i]]=e(j[i]),c.supports.everything=c.supports.everything&&c.supports[j[i]],"flag"!==j[i]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[j[i]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(h=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",h,!1),a.addEventListener("load",h,!1)):(a.attachEvent("onload",h),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),g=c.source||{},g.concatemoji?f(g.concatemoji):g.wpemoji&&g.twemoji&&(f(g.twemoji),f(g.wpemoji)))}(window,document,window._wpemojiSettings);
+		</script><script src="http://www.thesistheme.net/wp-includes/js/wp-emoji-release.min.js?ver=5.2.1" type="text/javascript" defer=""></script>
 <style type="text/css">
 img.wp-smiley,
 img.emoji {
@@ -32,6 +32,7 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
+<link rel="stylesheet" id="wp-block-library-css" href="http://www.thesistheme.net/wp-includes/css/dist/block-library/style.min.css?ver=5.2.1" type="text/css" media="all">
 <link rel="https://api.w.org/" href="http://www.thesistheme.net/wp-json/">
 <link rel="alternate" type="application/json+oembed" href="http://www.thesistheme.net/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fwww.thesistheme.net%2Fprivacy-policy">
 <link rel="alternate" type="text/xml+oembed" href="http://www.thesistheme.net/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fwww.thesistheme.net%2Fprivacy-policy&amp;format=xml">
@@ -302,8 +303,8 @@ Add your Site to our Thesis Showcase</a>
 <div class="page">
 <div id="footer">
 <span class="leftfooter"><a href="http://www.thesistheme.net" title="Thesis Skins">Thesis Skins</a> for the <a href="http://www.thesis-theme.com">Thesis WordPress Theme</a> </span> <span class="rightfooter"> <a href="http://www.thesistheme.net/privacy-policy">Privacy Policy</a> · <a href="http://www.thesistheme.net/thesistheme-net-affiliate-program">Affiliate Program</a> · <a href="http://www.thesistheme.net/contact-me">Contact Me</a></span>
-<script type="text/javascript" src="http://www.thesistheme.net/wp-includes/js/comment-reply.min.js?ver=4.9.8"></script>
-<script type="text/javascript" src="http://www.thesistheme.net/wp-includes/js/wp-embed.min.js?ver=4.9.8"></script>
+<script type="text/javascript" src="http://www.thesistheme.net/wp-includes/js/comment-reply.min.js?ver=5.2.1"></script>
+<script type="text/javascript" src="http://www.thesistheme.net/wp-includes/js/wp-embed.min.js?ver=5.2.1"></script>
 </div>
 </div>
 </div>
