--- a/c/co/coo/cooper.com.html
+++ b/c/co/coo/cooper.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cooper.com privacy policy that was archived on 2018-07-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180704011031id_/https%3A//www.cooper.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cooper.com privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609105222id_/https%3A//www.cooper.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
@@ -19,7 +19,7 @@
   <meta name="msapplication-TileImage" content="/images/touch/tileicon.png">
   <meta property="twitter:account_id" content="17223242">
   <link rel="alternate" type="application/rss+xml" title="Cooper » Feed" href="https://www.cooper.com/feed">
-  <script type="text/javascript" async="" src="https://snap.licdn.com/li.lms-analytics/insight.min.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" src="https://snap.licdn.com/li.lms-analytics/insight.min.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-NRL9LXQ"></script><script src="https://use.typekit.net/uip1gao.js"></script>
+  <script type="text/javascript" async="" src="https://snap.licdn.com/li.lms-analytics/insight.min.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" async="" src="https://snap.licdn.com/li.lms-analytics/insight.min.js"></script><script type="text/javascript" async="" src="https://js.driftt.com/include/1580403600000/5snsg8i5pu54.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-NRL9LXQ"></script><script src="https://use.typekit.net/uip1gao.js"></script>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -34,6 +34,34 @@
     ga('create', 'UA-1828481-1', 'auto');
   ga('send', 'pageview');
   </script>
+  <!-- Start of Async Drift Code -->
+  <script>
+  "use strict";
+
+  !function() {
+    var t = window.driftt = window.drift = window.driftt || [];
+    if (!t.init) {
+      if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+      t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+      t.factory = function(e) {
+        return function() {
+          var n = Array.prototype.slice.call(arguments);
+          return n.unshift(e), t.push(n), t;
+        };
+      }, t.methods.forEach(function(e) {
+        t[e] = t.factory(e);
+      }), t.load = function(t) {
+        var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+        var i = document.getElementsByTagName("script")[0];
+        i.parentNode.insertBefore(o, i);
+      };
+    }
+  }();
+  drift.SNIPPET_VERSION = '0.3.1';
+  drift.load('5snsg8i5pu54');
+  </script>
+  <!-- End of Async Drift Code -->
 </head>
 <body class="privacy-policy with-banner with-gdpr-banner">
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRL9LXQ"
@@ -145,7 +173,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </div>
   <div class="copyright container">
-    © 2018 Cooper. All rights reserved. <a href="/privacy-policy">Privacy Policy</a>.
+    © 2019 Cooper. All rights reserved. <a href="/privacy-policy">Privacy Policy</a>.
   </div>
 </footer>
 
