--- a/m/my/myh/myhermes.co.uk.html
+++ b/m/my/myh/myhermes.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myhermes.co.uk privacy policy that was archived on 2018-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181231201436id_/https%3A//www.myhermes.co.uk/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myhermes.co.uk privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611071349id_/https%3A//www.myhermes.co.uk/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xml:lang="en" lang="en" class="no-js "><!-- <![endif]--><head>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE8">
@@ -12,22 +12,23 @@
 
     <meta name="robots" content="all">
 
+      <link rel="canonical" href="https://myhermes.co.uk/privacy-policy/">
 
 
-<meta name="version" content="10.45.0-20181217-192049-PRD-A">
-<!--version: 10.45.0-20181217-192049-PRD-A-->
+<meta name="version" content="10.52.1-20190510-091721-PRD-A">
+<!--version: 10.52.1-20190510-091721-PRD-A-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 
-<title>myHermes - Privacy policy</title>
+<title>Privacy policy - Hermes</title>
 
 <link rel="shortcut icon" href="/resources/themes/myHermes/img/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="/resources/themes/myHermes/img/apple-touch-icon.png">
 <!-- mgnlHtmlHeader -->
-        <link rel="stylesheet" type="text/css" href="/resources/themes/myHermes/css/mh-icons.2018-09-27-11-44-33-738.cache.css">
-        <link rel="stylesheet" type="text/css" href="/resources/themes/myHermes/css/mh-objects-blessed2.2018-09-27-11-44-33-712.cache.css">
-        <link rel="stylesheet" type="text/css" href="/resources/themes/myHermes/css/mh-objects-blessed1.2018-09-27-11-44-33-673.cache.css">
-        <link rel="stylesheet" type="text/css" href="/resources/themes/myHermes/css/mh-objects.2018-09-27-11-44-33-690.cache.css">
+        <link rel="stylesheet" type="text/css" href="/resources/themes/myHermes/css/mh-icons.2019-05-15-14-01-15-476.cache.css">
+        <link rel="stylesheet" type="text/css" href="/resources/themes/myHermes/css/mh-objects-blessed2.2019-05-15-14-01-15-475.cache.css">
+        <link rel="stylesheet" type="text/css" href="/resources/themes/myHermes/css/mh-objects-blessed1.2019-05-15-14-01-15-472.cache.css">
+        <link rel="stylesheet" type="text/css" href="/resources/themes/myHermes/css/mh-objects.2019-05-15-14-01-15-474.cache.css">
 
 
 <style>
@@ -43,7 +44,7 @@
 
 
 <!--[if ! lte IE 6]><!-->
-<script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=719d34d31c8e3a6e6fffd425f7e032f3&amp;ns=1&amp;cb=1953896324"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-N8L8SW"></script><script>
+<script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=719d34d31c8e3a6e6fffd425f7e032f3&amp;ns=1&amp;cb=1614426220"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-N8L8SW"></script><script>
   //global information for the javascripts
   window.magnoliaFrontendData = {
     themePath: "/resources/templating-kit/",
@@ -67,17 +68,17 @@
 
 </script>
 
-<script src="/resources/themes/myHermes/js/vendor/jquery/jquery.2018-09-27-11-44-32-240.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/vendor/jquery/ui/jquery-ui.2018-09-27-11-44-32-319.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/vendor/jquery/jquery-cookie.2018-09-27-11-44-32-418.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/vendor/bootstrap/bootstrap.min.2018-09-27-11-44-32-584.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/myHermes/global/mh-select.2018-09-27-11-44-32-643.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/myHermes/global/loading.2018-09-27-11-44-32-391.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/myHermes/utils/functions.2018-09-27-11-44-32-360.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/myHermes/global/mh-offcanvas.2018-09-27-11-44-32-737.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/myHermes/global/global.2018-09-27-11-44-32-686.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/myHermes/global/global-utils.2018-09-27-11-44-32-298.cache.js" type="text/javascript"></script>
-<script src="/resources/themes/myHermes/js/vwoCode.2018-09-27-11-44-32-405.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/vendor/jquery/jquery.2019-05-15-14-01-15-205.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/vendor/jquery/ui/jquery-ui.2019-05-15-14-01-15-219.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/vendor/jquery/jquery-cookie.2019-05-15-14-01-15-230.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/vendor/bootstrap/bootstrap.min.2019-05-15-14-01-15-235.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/myHermes/global/mh-select.2019-05-15-14-01-15-263.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/myHermes/global/loading.2019-05-15-14-01-15-224.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/myHermes/utils/functions.2019-05-15-14-01-15-222.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/myHermes/global/mh-offcanvas.2019-05-15-14-01-15-271.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/myHermes/global/global.2019-05-15-14-01-15-269.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/myHermes/global/global-utils.2019-05-15-14-01-15-218.cache.js" type="text/javascript"></script>
+<script src="/resources/themes/myHermes/js/vwoCode.2019-05-15-14-01-15-227.cache.js" type="text/javascript"></script>
 
 
 <!--<![endif]-->
@@ -166,7 +167,7 @@
 </script><header id="header" class="branding">
     <div class="container">
 
-        <a href="/home.html" class="logo">myHermes</a>
+        <a href="/home.html" class="logo">Hermes</a>
 
 
 <div id="header-actions" class="header-buttons text-right hidden-sm">
@@ -214,7 +215,7 @@
             var min = 89790681;
             var max = 89815680;
 
-            if (internationalClientSequence >= min && internationatralClientSequence <= max) {
+            if (internationalClientSequence >= min && internationalClientSequence <= max) {
                 return true;
             }
 
@@ -263,7 +264,7 @@
             <a href="/customer/view-orders.html" class="navbar-toggle collapsed icon-size">
                 <span class="glyphicon glyphicon-shopping-cart"></span>
             </a>
-            <a class="navbar-brand" href="/home.html">myHermes</a>
+            <a class="navbar-brand" href="/home.html">Hermes</a>
         </div>
 
         <div id="navbar" class="navbar-collapse hidden-xs">
@@ -300,7 +301,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="/our-services/business-accounts.html" id="nav-business"><em class="fa fa-caret-right visible-xs-inline"></em> Business</a>
+                    <a href="/our-services/business-accounts.html" id="nav-business"><em class="fa fa-caret-right visible-xs-inline"></em> Business Accounts</a>
                 </li>
 
                 <li class="dropdown">
@@ -797,7 +798,7 @@
 <nav class="navbar navbar-bottom" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/home.html">myHermes</a>
+      <a class="navbar-brand" href="/home.html">Hermes</a>
     </div>
     <div class="navbar-collapse">
       <ul class="nav navbar-nav  hidden-xs hidden-sm">
@@ -807,6 +808,7 @@
         <li><a href="/help/news.html"> News</a></li>
         <li><a href="/help/about.html"> About</a></li>
         <li><a href="/sitemap.html">Sitemap</a></li>
+        <li><a href="/students.html">Students</a></li>
       </ul>
       <ul class="social-nav pull-right">
         <li><a href="https://twitter.com/Hermesparcels" target="_blank">
@@ -893,7 +895,7 @@
 //<![CDATA[
 (function() {
 var _analytics_scr = document.createElement('script');
-_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=719d34d31c8e3a6e6fffd425f7e032f3&ns=1&cb=1953896324';
+_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=719d34d31c8e3a6e6fffd425f7e032f3&ns=1&cb=1614426220';
 var _analytics_elem = document.getElementsByTagName('script')[0]; _analytics_elem.parentNode.insertBefore(_analytics_scr, _analytics_elem);
 })();
 // ]]>
