--- a/e/ef/efe/efestivals.co.uk.html
+++ b/e/ef/efe/efestivals.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the efestivals.co.uk privacy policy that was archived on 2018-07-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180726073430id_/https%3A//www.efestivals.co.uk/about/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the efestivals.co.uk privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611171902id_/https%3A//www.efestivals.co.uk/about/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en-GB" prefix="og: //ogp.me/ns#"><head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
   <meta property="og:url" content="https://www.efestivals.co.uk/about/privacy.shtml">
   <meta property="og:image" content="https://www.efestivals.co.uk/photos/efestivals/logos/s300/logo2009-bordered.gif">
 <!-- Quantcast Choice. Consent Manager Tag -->
-<script type="text/javascript" async="" src="//addvantagetechnology.com/hb/efestivals_nonmod.js?v1580427021278"></script><script src="https://quantcast.mgr.consensu.org/cmp.js" async="" type="text/javascript"></script><script type="text/javascript" async="true">
+<script type="text/javascript" async="" src="//addvantagetechnology.com/hb/efestivals_nonmod.js?v1580427021354"></script><script src="https://quantcast.mgr.consensu.org/cmp.js" async="" type="text/javascript"></script><script type="text/javascript" async="true">
     var elem = document.createElement('script');
     elem.src = 'https://quantcast.mgr.consensu.org/cmp.js';
     elem.async = true;
@@ -175,7 +175,18 @@
             background-color: #2DCACD !important;
             border-color: #2DCACD !important;
         }
+	.qc-cmp-persistent-link {
+	    display:none !important; 
+	}
     </style>
+  <script data-cfasync="false" type="text/javascript">(function(w, d) { var s = d.createElement('script'); s.src = '//delivery.adrecover.com/37848/adRecover.js?ts=1544099727749'; s.type = 'text/javascript'; s.async = true; (d.getElementsByTagName('head')[0] || d.getElementsByTagName('body')[0]).appendChild(s); })(window, document);</script><script src="//delivery.adrecover.com/37848/adRecover.js?ts=1544099727749" type="text/javascript" async=""></script>
+  <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-8655001720710332",
+          enable_page_level_ads: true
+     });
+  </script>
   <link href="//www.efestivals.co.uk/rss/efestivals_news.xml" rel="alternate" type="application/rss+xml" title="rss">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="//efestivals.s3.amazonaws.com/lib/css/normalize.css">
@@ -194,7 +205,6 @@
             sc.src='//addvantagetechnology.com/hb/efestivals_nonmod.js?v' + new Date().getTime(); 
             s.parentNode.insertBefore(sc,s);
 </script>
-<script type="text/javascript" src="//static.criteo.net/js/ld/publishertag.js"></script>
 </head>
 <body>
 <script type="text/javascript">var MenuLinkedBy="AllWebMenus [4]",awmMenuName="efest15",awmBN="940";</script><script charset="UTF-8" src="//efestivals.s3.amazonaws.com/lib/menu/efest15.js" type="text/javascript"></script><script type="text/javascript">awmBuildMenu();</script>
@@ -239,13 +249,6 @@
           <div id="layout_mainArea">
             <div id="adheader_global">
             <div id="5614964"></div>
-		<div id="crt-515633" style="width:728px;height:90px;"></div>
-<script type="text/javascript">
-Criteo.DisplayAcceptableAdIfAdblocked({
-    "zoneid": 515633,
-    "containerid": "crt-515633",
-    "overrideZoneFloor": "false"});
-</script>
 	     </div>
             <!-- h1>eFestivals.co.uk</h1 -->
             <div id="content_body">
@@ -279,34 +282,34 @@ Criteo.DisplayAcceptableAdIfAdblocked({
 <div class="l_pink"></div>
 <h4>latest updates</h4>
 <div class="l_pink"></div>
-      <div class="rp1_newsitem">        <a href="/votd/2018-07-26">        <img src="/img/youtube/Jzcytiq8ZOo/80.jpg" width="40" height="40" alt="" border="0">
-        <strong>Lucy Spraggan - Last Night (Beer Fear) (Official Video)</strong><br>
-video of the day</a>
-        <div class="txtTiny">last updated: Today, 12:00am</div>
-        <div class="clearfix"></div>
-      </div>
-      <div class="rp1_newsitem">        <a href="/festivals/bluedot/2019/">        <img src="/photos/2018/bluedot/s80/Around-the-site-BluDot-2018-IB11.JPG" width="40" height="40" alt="" border="0">
-        <strong>Bluedot 2019</strong><br>
+      <div class="rp1_newsitem">        <a href="/festivals/belsonic/2019/">        <img src="/photos/efestivals/logos/s80/logo2009-bordered.gif" width="40" height="40" alt="" border="0">
+        <strong>Belsonic 2019</strong><br>
 festival details</a>
-        <div class="txtTiny">last updated: Yesterday, 09:01pm</div>
+        <div class="txtTiny">last updated: Today, 05:49pm</div>
         <div class="clearfix"></div>
       </div>
-      <div class="rp1_newsitem">        <a href="/festivals/greenman/2018/">        <img src="/photos/greenman/2017/s80/aroundthesite-GreenMan2017-AM01.jpg" width="40" height="40" alt="" border="0">
-        <strong>The Green Man Festival 2018</strong><br>
-festival details</a>
-        <div class="txtTiny">last updated: Yesterday, 05:21pm</div>
-        <div class="clearfix"></div>
-      </div>
-      <div class="rp1_newsitem">        <a href="/festivals/meraki/2019/">        <img src="/photos/efestivals/logos/s80/logo2009-bordered.gif" width="40" height="40" alt="" border="0">
-        <strong>Meraki 2018</strong><br>
-festival details</a>
-        <div class="txtTiny">last updated: Yesterday, 05:20pm</div>
-        <div class="clearfix"></div>
-      </div>
-      <div class="rp1_newsitem">        <a href="/festivals/meraki/2019/lineup.shtml">        <img src="/photos/campbestival/2017/s80/AllSaints-CampBestival2017-CSM11.jpg" width="40" height="40" alt="" border="0">
-        <strong>Meraki 2018</strong><br>
+      <div class="rp1_newsitem">        <a href="/festivals/belsonic/2019/lineup.shtml">        <img src="/photos/v/stafford/2015/s80/Hozier6WestonPark230815TOW.JPG" width="40" height="40" alt="" border="0">
+        <strong>Belsonic 2019</strong><br>
 line-ups &amp; rumours</a>
-        <div class="txtTiny">last updated: Yesterday, 05:20pm</div>
+        <div class="txtTiny">last updated: Today, 05:48pm</div>
+        <div class="clearfix"></div>
+      </div>
+      <div class="rp1_newsitem">        <a href="/festivals/boomtown/2019/">        <img src="/photos/2018/boomtown/s80/AroundTheSite-BoomtownFair2018-PB32.JPG" width="40" height="40" alt="" border="0">
+        <strong>BoomTown Fair 2019</strong><br>
+festival details</a>
+        <div class="txtTiny">last updated: Today, 04:17pm</div>
+        <div class="clearfix"></div>
+      </div>
+      <div class="rp1_newsitem">        <a href="/festivals/boomtown/2019/lineup.shtml">        <img src="/photos/ynot/2017/s80/Slaves-YNotFestival2017-DAG04.jpg" width="40" height="40" alt="" border="0">
+        <strong>BoomTown Fair 2019</strong><br>
+line-ups &amp; rumours</a>
+        <div class="txtTiny">last updated: Today, 04:16pm</div>
+        <div class="clearfix"></div>
+      </div>
+      <div class="rp1_newsitem">        <a href="/festivals/glastonbury/2019/lineup.shtml">        <img src="/photos/trnsmit/2017/s80/stormzy-trnsmt2017-te03.jpg" width="40" height="40" alt="" border="0">
+        <strong>Glastonbury Festival 2019</strong><br>
+line-ups &amp; rumours</a>
+        <div class="txtTiny">last updated: Today, 02:53pm</div>
         <div class="clearfix"></div>
       </div>
       <br>
@@ -316,23 +319,14 @@ line-ups &amp; rumours</a>
             </div> <!-- content_body -->
             <div id="sidebar">
            <div id="adsideMPU">
-            <div id="5614962"></div>
-
-<div id="crt-515630" style="width:300px;height:250px;"></div>
-<script type="text/javascript">
-Criteo.DisplayAcceptableAdIfAdblocked({
-    "zoneid": 515630,
-    "containerid": "crt-515630",
-    "overrideZoneFloor": "false"});
-</script>
+             <div id="5614962"></div>
            </div>
               <p> </p>
               <h2 class="box_title">Competitions - win stuff!</h2>
               <div class="compbox">
                 <ul>
-                  <li><a href="/festivals/cream/2018/competition.shtml"><b>WIN tickets to Creamfields 2018</b></a></li>
-                  <li><a href="/festivals/glasgowss/2018/competition.shtml"><b>WIN tickets to Glasgow Summer Sessions 2018</b></a></li>
-                  <li><a href="/festivals/lindisfarne/2018/competition.shtml"><b>WIN tickets to Lindisfarne Festival 2018</b></a></li>
+                  <li><a href="/festivals/splendour/2019/competition.shtml"><b>WIN tickets to Splendour 2019</b></a></li>
+                  <li><a href="/festivals/rugfest/2019/competition.shtml"><b>WIN tickets to Rugfest 2019</b></a></li>
                 </ul>
               </div>
               <div class="right_box">
@@ -367,38 +361,38 @@ Criteo.DisplayAcceptableAdIfAdblocked({
 
                             <div class="right_newsbox">
                 <h2 class="box_title" style="text-align:left;">Latest Festival News</h2>
-  <div class="side_news1">    <a href="/news/18/180723a.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/2018/trnsmt/s50/LUCIA-TRNSMT2018-TE05.jpg" alt="">
+  <div class="side_news1">    <a href="/news/19/190611b.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/glastonbury/2017/s50/ThePark-Glasto2017-KW-1-18.jpg" alt="">
       </div>
-      <div class="side_news_txt">        <strong>Henge, Foxtrap, Lucia, Chris Helme, Nigel Clarke, &amp; many more for Dirty Weekender 2018</strong> - joining Jake Bugg, and The Coral, in Kilmarnock in November
-        <span class="txtTiny">published: Mon 23rd Jul 2018</span>
-      </div>
-    </a>
-  </div>
-  <div class="side_news1">    <a href="/festivals/cream/2018/competition.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/publicity/s50/creamfieldspryo.jpg" alt="">
-      </div>
-      <div class="side_news_txt">        <strong>WIN tickets to Creamfields 2018</strong> - see Carl Cox, Eric Prydz, Major Lazer, Axwell &amp; Ingrosso, Steve Angello, &amp; many more
-        <span class="txtTiny">published: Mon 23rd Jul 2018</span>
+      <div class="side_news_txt">        <strong>How to survive Glastonbury Festival WaterAid-style</strong>
+        <span class="txtTiny">published: Today, 01:00pm</span>
       </div>
     </a>
   </div>
-  <div class="side_news1">    <a href="/festivals/glasgowss/2018/competition.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/publicity/s50/Summer_Sessions_Day_1-High_Res-ryanjohnstonco-184.jpg" alt="">
+  <div class="side_news1">    <a href="/news/19/190611a.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/2018/rize/s50/milesKane-Rize-18-JR04.JPG" alt="">
       </div>
-      <div class="side_news_txt">        <strong>WIN tickets to Glasgow Summer Sessions 2018</strong> - see Kings of Leon, Catfish and the Bottlemen, or Kendrick Lamar
-        <span class="txtTiny">published: Thu 19th Jul 2018</span>
-      </div>
-    </a>
-  </div>
-  <div class="side_news1">    <a href="/news/18/180718a.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/bestival/2017/s50/aroundsite1-Bestival-2017-JC054.jpg" alt="">
-      </div>
-      <div class="side_news_txt">        <strong>Kurupt FM, Superfood, Jimothy Lacoste &amp; more join Bestival 2018 with House of Vans</strong>
-        <span class="txtTiny">published: Wed 18th Jul 2018</span>
+      <div class="side_news_txt">        <strong>Miles Kane, Easy Life, The Blinders, Ten Tonnes &amp; more for Neighbourhood Festival 2019</strong> - indoors in Manchester in October
+        <span class="txtTiny">published: Today, 12:07pm</span>
       </div>
     </a>
   </div>
-  <div class="side_news1">    <a href="/news/18/180717b.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/efestivals/logos/s50/logo2009-bordered.gif" alt="">
+  <div class="side_news1">    <a href="/news/19/190607a.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/2018/arctangent/s50/AroundtheSite-ArcTanGent18-MSM31.jpg" alt="">
       </div>
-      <div class="side_news_txt">        <strong>on-site drug safety testing at MADE festival 2018</strong> - as part of a new harm reduction strategy
-        <span class="txtTiny">published: Tue 17th Jul 2018</span>
+      <div class="side_news_txt">        <strong>a new 5th stage for ArcTanGent 2019</strong> - joining Coheed &amp; Cambria, Meshuggah, Battles, Cult of Luna, Zeal &amp; Ardor, 65daysofstatic, &amp; more
+        <span class="txtTiny">published: Fri 7th Jun 2019</span>
+      </div>
+    </a>
+  </div>
+  <div class="side_news1">    <a href="/news/19/190606d.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/2018/trnsmt/s50/SCENES3-TRNSMT2018-TE16.jpg" alt="">
+      </div>
+      <div class="side_news_txt">        <strong>new Queen Tut's Stage for TRNSMT 2019</strong> - some of the best emerging female acts the country has to offer
+        <span class="txtTiny">published: Thu 6th Jun 2019</span>
+      </div>
+    </a>
+  </div>
+  <div class="side_news1">    <a href="/news/19/190606c.shtml">      <div class="side_news_pic">        <img src="//www.efestivals.co.uk/photos/2018/latitude/s50/Aroundsite1-JC039.jpg" alt="">
+      </div>
+      <div class="side_news_txt">        <strong>Richard Curtis &amp; more for Latitude 2019's arts stages</strong>
+        <span class="txtTiny">published: Thu 6th Jun 2019</span>
       </div>
     </a>
   </div>
@@ -443,16 +437,15 @@ Criteo.DisplayAcceptableAdIfAdblocked({
         </div>
       </div> <!-- layout_content -->
     </div> <!-- layout_body -->
-  </div><iframe name="__cmpLocator" style="display: none;"></iframe> <!-- layout_container -->
+  </div> <!-- layout_container -->
   <p> </p>
     <div class="footer">
       <a href="/about/disclaimer.shtml">disclaimer</a> | <a href="/about/privacy.shtml">privacy policy</a><br>
-      <strong>independent and proud, not corrupted by payola</strong><br>
-      <strong>© 1998 - 2018 <a href="/">eFestivals.co.uk</a></strong><br>
+      <strong>© 1998 - 2019 <a href="/">eFestivals.co.uk</a></strong><br>
     </div>
 
   <p> </p>
-  <script src="//efestivals.s3.amazonaws.com/lib/js/plugins.js"></script>
+  <iframe name="__cmpLocator" style="display: none;"></iframe><script src="//efestivals.s3.amazonaws.com/lib/js/plugins.js"></script>
 
   <script type="text/javascript">
   	$(document).ready(function() {
